<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView

        android:id="@+id/action_player"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_score"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/score"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_time"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/time"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_faults"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/faults"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp" />

</LinearLayout>