<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teamAdderContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center_horizontal"
                android:text="@string/team"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="36sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center_horizontal"
                android:text="@string/team_add"
                android:textColor="@color/colorAccentLight"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/comfortaa_bold"
                        android:singleLine="true"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/edit_text_team_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:fontFamily="@font/comfortaa_bold"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryLight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/comfortaa_bold"
                        android:singleLine="true"
                        android:text="@string/city"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="24sp" />

                    <EditText

                        android:id="@+id/edit_text_team_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:fontFamily="@font/comfortaa_bold"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryLight" />

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/team_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/team_plus"
                    app:fabSize="mini" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center_horizontal"
                android:text="@string/player_add"
                android:textColor="@color/colorAccentLight"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/comfortaa_bold"
                            android:singleLine="true"
                            android:text="@string/name"
                            android:textColor="@color/colorPrimaryLight"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/edit_text_player_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimaryLight"
                            android:fontFamily="@font/comfortaa_bold"
                            android:singleLine="true"
                            android:textColor="@color/colorPrimaryLight" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/comfortaa_bold"
                                android:singleLine="true"
                                android:text="@string/jersey"
                                android:textColor="@color/colorPrimaryLight"
                                android:textSize="24sp" />

                            <EditText
                                android:id="@+id/edit_text_player_jersey"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/colorPrimaryLight"
                                android:fontFamily="@font/comfortaa_bold"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimaryLight" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/comfortaa_bold"
                                android:singleLine="true"
                                android:text="@string/team_name"
                                android:textColor="@color/colorPrimaryLight"
                                android:textSize="24sp" />

                            <Spinner
                                android:id="@+id/spinner_player_team"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/colorPrimaryLight"
                                android:fontFamily="@font/comfortaa_bold"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimaryLight" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/player_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/team_plus"
                    app:fabSize="mini" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>
